--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -154,7 +154,8 @@ article p{
 #End input{
     width: 300px;
     height: 50px;
-    margin-top: 20px;
+    margin-top: 10px;
+    padding: 20px;
 }
 
 
